--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -15,18 +15,8 @@ a.powerballer {
   
 }
 
-/* .powerballer {
-  text-decoration: none;
-  
-} */
+#navJackpot {
+  font-size: .90rem;
+}
 
-/* 
-
-
-  
-  
-/* h3 {
-  text-decoration: none;
-  
-  } */
   
